<resources>
    <string name="app_name">Asteroid Radar</string>

    <!-- Network Strings -->
    <string name="API_KEY">0L79ZtiOlYdTYZlihXCtdgHjmz98YfiXjA9pFUU3</string>

    <string name="API_QUERY_DATE_FORMAT">YYYY-MM-dd</string>
    <string name="DEFAULT_END_DATE_DAYS">7</string>



    <string name="img_of_the_day_txt">Image of the Day</string>


<!--    Asteroid Detail Fragment Strings -->
    <string name="close_approach_date_title">Close Approach Date</string>
    <string name="absolute_magnitude">Absolute Magnitude</string>
    <string name="estimated_diameter">Estimated diameter</string>
    <string name="relative_velocity">Relative Velocity</string>
    <string name="distance_from_earth">Distance from earth</string>


<!--    Overflow menu strings-->
    <string name="view_saved_asteroids">View saved asteroids</string>
    <string name="view_today_asteroids">View today asteroids</string>
    <string name="view_week_asteroids">View week asteroids</string>


    <string name="okay_message">OK</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="astronomical_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
    <string name="failed_to_load_error_message">Failed to load data. Please try opening the app in some time.</string>
</resources>