<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="asteroidObj"
            type="com.example.asteroidradar.viewModels.AsteroidDetailViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/AppTheme"
        tools:context=".Fragments.AsteroidDetailFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/chosen_asteroid_img_view"
            android:layout_width="0dp"
            android:layout_height="220dp"
            app:asteroidImage="@{asteroidObj.detailsOfSelectedAsteroid.dangerous}"
            tools:src="@tools:sample/backgrounds/scenic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chosen_asteroid_img_view">

          <androidx.appcompat.widget.LinearLayoutCompat
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

              <androidx.appcompat.widget.LinearLayoutCompat
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="16dp"
                  android:orientation="vertical">

                  <androidx.appcompat.widget.AppCompatTextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/AsteroidRadarHeaderTextStyle"
                      android:id="@+id/title_close_approach_date"
                      android:text="@string/close_approach_date_title"
                      android:contentDescription="@string/close_approach_date_title" />

                  <androidx.appcompat.widget.AppCompatTextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/close_approach_date"
                      app:closeApproachDate="@{asteroidObj.detailsOfSelectedAsteroid.closeApproachDate}"
                      android:layout_marginTop="4dp"
                      tools:text="2022-01-03"
                      style="@style/AsteroidRadarInfoTextStyle"/>


              </androidx.appcompat.widget.LinearLayoutCompat>

              <androidx.appcompat.widget.LinearLayoutCompat
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="16dp"
                  android:weightSum="3"
                  android:orientation="horizontal">

              <androidx.appcompat.widget.LinearLayoutCompat
                  android:layout_width="0dp"
                  android:layout_weight="2.8"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

                  <androidx.appcompat.widget.AppCompatTextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/AsteroidRadarHeaderTextStyle"
                      android:layout_marginTop="4dp"
                      android:id="@+id/title_absolute_magnitude"
                      android:text="@string/absolute_magnitude"/>

                  <androidx.appcompat.widget.AppCompatTextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/magnitude"
                      android:layout_marginTop="4dp"
                      app:magnitude="@{asteroidObj.detailsOfSelectedAsteroid.absoluteMagnitude}"
                      style="@style/AsteroidRadarInfoTextStyle"
                      tools:text="2022-01-03" />
              </androidx.appcompat.widget.LinearLayoutCompat>

                  <androidx.appcompat.widget.AppCompatImageView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.2"
                      android:padding="16dp"
                      android:contentDescription="@string/astronomical_unit_explanation_button"
                      android:id="@+id/info_img"
                      android:src="@drawable/ic_baseline_help_24"
                      tools:src="@drawable/ic_baseline_help_24"/>
          </androidx.appcompat.widget.LinearLayoutCompat>

              <androidx.appcompat.widget.LinearLayoutCompat
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="16dp"
                  android:orientation="vertical">

                  <androidx.appcompat.widget.AppCompatTextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/AsteroidRadarHeaderTextStyle"
                      android:id="@+id/title_estimated_diameter"
                      android:text="@string/estimated_diameter" />

                  <androidx.appcompat.widget.AppCompatTextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/estimated_diameter"
                      android:layout_marginTop="4dp"
                      app:estimatedDiameter="@{asteroidObj.detailsOfSelectedAsteroid.estimatedDiameterKmsMax}"
                      tools:text="2022-01-03"
                      style="@style/AsteroidRadarInfoTextStyle"/>

              </androidx.appcompat.widget.LinearLayoutCompat>

              <androidx.appcompat.widget.LinearLayoutCompat
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="16dp"
                  android:orientation="vertical">

                  <androidx.appcompat.widget.AppCompatTextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/AsteroidRadarHeaderTextStyle"
                      android:id="@+id/title_relative_velocity"
                      android:text="@string/relative_velocity"
                      android:textColor="@color/white"/>

                  <androidx.appcompat.widget.AppCompatTextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/relative_velocity"
                      android:layout_marginTop="4dp"
                      app:relativeVelocity="@{asteroidObj.detailsOfSelectedAsteroid.relativeVelocityKmps}"
                      tools:text="2022-01-03"
                      style="@style/AsteroidRadarInfoTextStyle"/>

              </androidx.appcompat.widget.LinearLayoutCompat>

              <androidx.appcompat.widget.LinearLayoutCompat
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="16dp"
                  android:orientation="vertical">

                  <androidx.appcompat.widget.AppCompatTextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/AsteroidRadarHeaderTextStyle"
                      android:id="@+id/title_distance_from_earth"
                      android:text="@string/distance_from_earth" />

                  <androidx.appcompat.widget.AppCompatTextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/distance_from_earth"
                      android:layout_marginTop="4dp"
                      app:distanceFromEarth="@{asteroidObj.detailsOfSelectedAsteroid.missDistanceAstronomical}"
                      tools:text="2022-01-03"
                      style="@style/AsteroidRadarInfoTextStyle"/>

              </androidx.appcompat.widget.LinearLayoutCompat>


          </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>